--- a/Client/_Imports.razor
+++ b/Client/_Imports.razor
@@ -3,9 +3,9 @@
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
-@using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
+@using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using UniversityWebApp
-@using UniversityWebApp.Shared;
-@using UniversityWebApp.Components
+@using UniversityWebApp.Shared
+@using UniversityWebApp.Layout
