fix: typo and style consistency

--- a/Client/Pages/Enrollments.razor
+++ b/Client/Pages/Enrollments.razor
@@ -4,4 +4,4 @@
 
 <h2>Upisi studenata na kolegije</h2>
 
-<p>Niže odaberite studenta i kolegije za izvršavanje upisa.</p>
+<p>Niže odaberite studenta i kolegij za izvršavanje upisa.</p>
